# streamlet

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: main.rs  player.rs
streamlet/: __init__.py  entry.py  killable_thread.py  thread_utils.py
tests/: test_streamlet.py
