[package]
name = "streamlet"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"

[dependencies]
anyhow = "1"
clipboard = "0.5"
gstreamer = "0.16"
gstreamer-player = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "1"
termion = "1"
tui = "0.12"
unicode-width = "0.1"
