[package]
name = "streamlet"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"

[dependencies]
anyhow = "1"
clipboard = "0.5"
futures = { version = "0.3", features = ["thread-pool"] }
gstreamer = "0.16"
gstreamer-player = "0.16"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termion = "1"
tui = "0.12"
unicode-width = "0.1"
