[tool.poetry]
name = "streamlet"
version = "0.1.0"
description = ""
authors = ["Romain Leroux <romain@leroux.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
npyscreen = "^4.10"
youtube_dl = "^2020"
pyalsaaudio = "^0.8"

[tool.poetry.scripts]
streamlet = 'streamlet.entry:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7"
python-language-server = "^0.31"
pyls-black = "^0.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
